--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/resume-example.pdf')"
+            onclick="window.open('./assets/temp.pdf')"
           >
             Download CV
           </button>
@@ -61,13 +61,13 @@
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https://linkedin.com/in/abhaytiwariofficial'"
+            onclick="location.href='https://linkedin.com/in/abhaytiwaricode'"
           />
           <img
             src="./assets/github.png"
             alt="My Github profile"
             class="icon"
-            onclick="location.href='https://github.com/abhaytiwariofficial'"
+            onclick="location.href='https://github.com/abhaytiwaricode'"
           />
         </div>
       </div>
@@ -351,7 +351,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">abhaytiwariwork@gmail.com</a></p>
+          <p><a href="mailto:abhaytiwariwork@gmail.com">abhaytiwariwork@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
@@ -359,7 +359,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.linkedin.com/in/abhaytiwariofficial">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com/in/abhaytiwaricode">LinkedIn</a></p>
         </div>
       </div>
     </section>
